# audible-news-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  books.json  bot.env  bot.py  bot_settings.json  log.txt  requirements.txt  test.py  today_books.json  utility.py
.github/workflows/: deploy.yml
app/: bot.py  requirements.txt
app/data/: bot_state.json
audible-news-py/: docker-compose.yml
audible-news-py/app/: requirements.txt
audible-news-py/app/data/: bot_settings.json
audible-news-rs/: Cargo.toml  Dockerfile  README.md  bot.env  docker-compose.yml
audible-news-rs/src/: book.rs  bot.rs  main.rs  settings.rs  storage.rs  utils.rs
audible-news-rs/src/storage/: s3_storage.rs
data/: bot_settings.json
rust-app/: Cargo.toml
rust-app/src/: main.rs
src/: book.rs  bot.rs  settings.rs  storage.rs
