[package]
name = "audible-news-rs"
version = "0.2.0"
edition = "2021"
rust-version = "1.91.1"

[dependencies]
async-trait = "0.1.89"
aws-config = "1.8.18"
aws-sdk-s3 = "1.137.0"
aws_lambda_events = { version = "1.2.0", features = ["eventbridge"] }
chrono = "0.4.45"
lambda_runtime = "1.2.1"
openssl = { version = "0.10.81", features = ["vendored"] }
reqwest = { version = "0.13.4", features = ["blocking"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
teloxide = "0.17.0"
tokio = { version = "1.52.3", features = ["macros"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
url = "2.5.8"
