[package]
name = "audible-news-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = "0.1.77"
aws-config = "1.1.6"
aws-sdk-s3 = "1.16.0"
aws_lambda_events = { version = "0.14.0", features = ["eventbridge"] }
chrono = "0.4.31"
clokwerk = "0.4.0"
derivative = "2.2.0"
lambda_runtime = "0.9.2"
openssl = { version = "0.10.60", features = ["vendored"] }
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
teloxide = "0.12.2"
tokio = { version = "1.33.0", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
url = "2.4.1"
