[package]
name = "rust-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = { version = "0.11.22", features = ["blocking"] }
scraper = "0.18.1"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
url = "2.4.1"
